# pdfrw

./: .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.rst  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  pylint.yml
pdfrw/: __init__.py  buildxobj.py  compress.py  crypt.py  errors.py  findobjs.py  pagemerge.py  pdfreader.py  pdfwriter.py  py23_diffs.py  tokens.py  toreportlab.py  uncompress.py
pdfrw/objects/: __init__.py  pdfarray.py  pdfdict.py  pdfindirect.py  pdfname.py  pdfobject.py  pdfstring.py
tests/: get_cpu_count.py  test_add_page.py  test_assert_helpers.py  test_examples.py  test_pdfdict.py  test_roundtrip.py
