[metadata]
name = pdfrw
version = attr: pdfrw.__version__
description = attr: pdfrw.__doc__
author = Patrick Maupin
author_email = pmaupin@gmail.com
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/sarnold/pdfrw
license = BSD
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Software Development :: Libraries
    Topic :: Text Processing
    Topic :: Printing
    Topic :: Utilities

[options]
python_requires = >= 3.6

packages =
    pdfrw
    pdfrw.objects

zip_safe = True

# deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
# these deps were only in reqs file, they are not strictly required
# unless dealing with encrypted or reportlab-generated PDFs, or
# converting images
rpt =
    pycryptodome >= 3.9.0
    reportlab >= 3.5.46
    Pillow >= 6.2.2
test =
    pytest
    pytest-cov
    pytest-xdist
cov =
    coverage[toml]
    coverage_python_version

all =
    %(cov)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests

max-line-length = 90
